# lex5-rs

./: Cargo.toml  README.md
.github/workflows/: check.yml  scheduled.yml  test.yml
assets/testing/config/: modes.json
lex-http/: Cargo.toml
lex-http/src/: handlers.rs  lib.rs  responses.rs  server.rs
lex-http/src/handlers/: list_modes.rs  show_mode.rs
lex-http/src/responses/: api_error.rs  api_success.rs
lex-json-repos/: Cargo.toml
lex-json-repos/src/: json_mode.rs  lib.rs
lex-server/: Cargo.toml
lex-server/src/: config.rs  main.rs
lex-server/tests/api/: conftest.rs  main.rs  modes.rs
lex-server/tests/api/snapshots/: api__modes__modes_returns_200.snap
lex-service/: Cargo.toml
lex-service/src/: ports.rs  service.rs
lex-service/src/models/: mode.rs
