[workspace]
resolver = "3"
members = ["lex-http", "lex-server", "lex-service"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# local crates
lex-http = { path = "./lex-http/" }
lex-service = { path = "./lex-service/" }

# external crates
anyhow = "1.0.99"
axum = "0.8.4"
fastrace = "0.7.14"
tokio = "1.47.1"
