[package]
name = "lex-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
fastrace.workspace = true
lex-service.workspace = true
log.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["net"] }
